Fix word-wrap
Fixed word-wrap by putting keep-all value. Close https://github.com/HardeepAsrani/latte-pro/issues/66

--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ License: GNU General Public License version 2 or later
 License URI: license.txt
 Tags: one-column, two-columns, left-sidebar, right-sidebar, custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-images, full-width-template, post-formats, sticky-post, theme-options, threaded-comments, translation-ready, blog, entertainment, photography, portfolio
 Text Domain: latte
-* 
-* Latte WordPress Theme, Copyright (C) 2016, Hardeep Asrani
-* Latte is distributed under the terms of the GNU GPL
+
+Latte WordPress Theme, Copyright (C) 2016, Hardeep Asrani
+Latte is distributed under the terms of the GNU GPL
 */
 
 /*
@@ -270,7 +270,7 @@ img.alignright,
 .intro .cover-heading {
 	font-family: 'Sanchez', sans-serif;
 	font-size: 50px;
-	word-break: break-all;
+	word-break: keep-all;
 }
 .intro .arrow .fa {
 	font-size: 50px;
@@ -298,7 +298,7 @@ img.alignright,
 	font-size: 40px;
 	font-family: "Sanchez",sans-serif;
 	font-weight: bold;
-	word-break: break-all;
+	word-break: keep-all;
 }
 .about .about-header h3 {
 	color: #9F8E8E;
@@ -332,7 +332,7 @@ img.alignright,
 	font-size: 40px;
 	font-family: "Sanchez",sans-serif;
 	font-weight: bold;
-	word-break: break-all;
+	word-break: keep-all;
 }
 .social .row .social-box {
 	float: none;
@@ -473,7 +473,7 @@ img.alignright,
 	font-size: 40px;
 	font-family: "Sanchez",sans-serif;
 	font-weight: bold;
-	word-break: break-all;
+	word-break: keep-all;
 }
 .services h3 {
 	color: #9F8E8E;
@@ -482,7 +482,7 @@ img.alignright,
 }
 .services .service-box {
 	padding: 25px;	
-	word-break: break-all;
+	word-break: keep-all;
 }
 .services .service-item {
 	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.176);
@@ -529,7 +529,7 @@ img.alignright,
 	font-size: 40px;
 	font-family: "Sanchez",sans-serif;
 	font-weight: bold;
-	word-break: break-all;
+	word-break: keep-all;
 }
 .separator .btn {
 	background: #181616;
@@ -559,7 +559,7 @@ img.alignright,
 	font-size: 40px;
 	font-family: "Sanchez",sans-serif;
 	font-weight: bold;
-	word-break: break-all;
+	word-break: keep-all;
 }
 .skills h3 {
 	color: #9F8E8E;
@@ -656,7 +656,7 @@ img.alignright,
 	font-size: 40px;
 	font-family: "Sanchez",sans-serif;
 	font-weight: bold;
-	word-break: break-all;
+	word-break: keep-all;
 }
 .portfolio-grid h3 {
 	color: #9F8E8E;
@@ -746,7 +746,7 @@ img.alignright,
 	font-family: "Sanchez",sans-serif;
 	font-weight: bold;
 	color: #FFF;
-	word-break: break-all;
+	word-break: keep-all;
 }
 .subscribe h3 {
 	color: #FFF;
@@ -809,7 +809,7 @@ img.alignright,
 	font-size: 40px;
 	font-family: "Sanchez",sans-serif;
 	font-weight: bold;
-	word-break: break-all;
+	word-break: keep-all;
 }
 .pricing h3 {
 	color: #9F8E8E;
@@ -908,7 +908,7 @@ img.alignright,
 	font-size: 40px;
 	font-family: "Sanchez",sans-serif;
 	font-weight: bold;
-	word-break: break-all;
+	word-break: keep-all;
 }
 .testimonials h3 {
 	color: #FFF;
@@ -1396,7 +1396,7 @@ img.alignright,
 	font-size: 40px;
 	font-family: "Sanchez",sans-serif;
 	font-weight: bold;
-	word-break: break-all;
+	word-break: keep-all;
 }
 .blogposts h3 {
 	color: #9F8E8E;
@@ -1463,7 +1463,7 @@ img.alignright,
 	font-size: 40px;
 	font-family: "Sanchez",sans-serif;
 	font-weight: bold;
-	word-break: break-all;
+	word-break: keep-all;
 }
 .contact h3 {
 	color: #FFF;
@@ -1539,7 +1539,7 @@ div.wpcf7-response-output {
 .archive-header .cover-heading {
 	font-family: 'Sanchez', sans-serif;
 	font-size: 50px;
-	word-break: break-all;
+	word-break: keep-all;
 }
 .archive-header .cover-heading a {
 	color: #FFF;
@@ -1749,7 +1749,7 @@ article.search-results {
 .latte-push-menu,
 .latte-push-menu .sub-menu {
 	padding: 0;
-	word-wrap: break-all;
+	word-wrap: keep-all;
 }
 .menu-item-has-children > .sub-menu {
 	display: none;
